[package]
name = "bevy-simple-state-machine"
version = "0.2.0"
edition = "2021"
description = "A rudimentary animation state machine system for Bevy"
repository = "https://github.com/LucaRickler/bevy-simple-state-machine"
authors = ["Luca Rickler <luca.rickler@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["gamedev", "bevy", "animation"]
categories = ["game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
